# streamlit-fastapi-poc

./: calculator.py  fast_api.py  pyproject.toml  streamlit_frontend.py
